<resources>

    <string name="app_name">To_DoList</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_to_do">ToDo</string>
    
    <!-- todo activty strings -->
    <string name="menu_settings">Add Task</string>
    <string name="menuNotice">Please add a task!</string>
    <string name="empty">No Tasks</string>
    <string name="newtask_hint">Type new task here</string>
    <string name="prefs">Settings</string>
    
    <!-- detail Form strings -->
    <string name="title_activity_detail_form">Task Details</string>
    <string name="streethint">Street</string>
    <string name="addresshint">City State Zip</string>
    <string name="task_title_hint">Enter Task Title</string>
    <string name="ques">question mark</string>
    <string name="priority_title">Priority:</string>
    <string name="date_title">Due: </string>
    <string name="location_title">Location: </string>
    <string name="list_title">List: </string>
    <string name="completion_title">Completion:</string>
    <string name="notes_hint">Notes</string>
    <string name="save_btn_txt">Save</string>

    <!-- preference layout strings -->
	<string name="titleSync">Sync todo list with:</string>
    <string name="calSync">Sync with Google Calendar</string>
    <string name="calSumm">Check this to sync (one-way) to Google Calendars on your device.</string>
     <string name="fileSync">Sync with a todo.txt file</string>
    <string name="fileSumm">Check this to sync (both ways) with a todo.txt file (See todo.info for more info).</string>
    
    <!-- Widget dialog strings -->
    <string name="edit_btn_txt">Edit</string>
    <string name="cancel_btn_txt">Cancel</string>

    <!-- widget strings -->
    <string name="widget_title">ToDo List</string>
    
    <string name="syncMenTitle">Sync</string>
	
</resources>