<!-- Chris Card Nathan Harvey | 11/6/2012 | layout for preferences for sorting tasks -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:dialogTitle="Choose a sort order"
        android:entries="@array/sort_titles"
        android:entryValues="@array/sort_clauses"
        android:key="sort_order"
        android:summary="Choose the order the list uses"
        android:title="Sort Order" />
    
    <CheckBoxPreference 
        android:key="syncCal"
        android:title="@string/titleSync"
        android:summary="@string/syncSumm"/>
    <CheckBoxPreference
        android:key="syncWcal"
        android:title="@string/calSync"
        android:summary="@string/calSumm"
        android:defaultValue="true"
        android:dependency="syncCal"/>
</PreferenceScreen>