<?xml version="1.0" encoding="utf-8"?>
<!-- Chris Card, Nathan Harvey | 10/27/12 | This is the layout for detailForm class -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/taskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title_hint" 
            android:inputType="text"
            android:maxLines="1"  
            android:textSize="20pt"/>

        <LinearLayout
            android:id="@+id/Priorities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="@string/priority_title"
                android:textSize="13pt" />

            <ImageButton
                android:id="@+id/Priorityq"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/priorityblank"
                android:contentDescription="@string/ques"
                android:onClick="priq"
                android:src="@drawable/priorityq" />

            <ImageButton
                android:id="@+id/Priority0"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/priorityblank"
                android:contentDescription="."
                android:onClick="prin"
                android:src="@drawable/prioritydot" />

            <ImageButton
                android:id="@+id/Priority1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/priorityblank"
                android:contentDescription="!"
                android:onClick="prio"
                android:src="@drawable/priority1" />

            <ImageButton
                android:id="@+id/Priority2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/priorityblank"
                android:contentDescription="!!"
                android:onClick="prit"
                android:src="@drawable/priority2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/date_title"
                android:textSize="13pt" />

            <EditText
                android:id="@+id/dueDatePicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:focusable="true"
                android:onClick="openCal"/>

            <ImageButton
                android:id="@+id/pickDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openCal"
                android:src="@drawable/ic_menu_my_calendar" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutHere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_title"
                    android:textSize="13pt" />

              <!--  until we get location listener to work commented this out <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="getLoc"
                    android:text="Here"
                    android:textSize="13dp" /> -->
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/street"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.98"
                    android:hint="@string/streethint"
                    android:inputType="textPostalAddress" 
                    android:textSize="13pt"/>

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:hint="@string/addresshint"
                    android:inputType="textPostalAddress" 
                    android:textSize="13pt"/>
            </LinearLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="openMaps"
                android:src="@drawable/ic_menu_mapmode" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPickList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_title"
                android:textSize="13pt" />

            <Spinner
                android:id="@+id/pickList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCompletion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completion_title"
                android:textSize="13pt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="" />

                <SeekBar
                    android:id="@+id/completion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="95" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:maxLines="11"
            android:hint="@string/notes_hint"
            android:inputType="textImeMultiLine" 
            android:textSize="13pt"/>
        <!-- How do I make this EditText fill up any remaining space? -->

        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDone"
            android:text="@string/save_btn_txt" />
    </LinearLayout>

</ScrollView>
